pre-2.x.x
    New Features
      - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
      - add ability to change keyboard focus using keyboard shortcuts or menus
          to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
      - preserve Media Overlay Active Classes when deleting unused classes
      - Goto Link Or Style (or Ctrl-Clicking on a class will now search selectors
          with combinators if nothing found in normal css classes
      - update to a newer Spanish hunspell dictionary
      - overhaul of Building on Linux documentation

    Bug Fixes
      - patch Qt6.5.3 to avoid transient child window resize bug on Windows
      - fix QuickParser bug when parseing attribute names not properly ignoring all legal whitespace
      - make OPF parsing robust to alternative whitespace usage as well
      - fix creation of thumbnails of svg images in SelectFiles and Image Report for macOS
      - fix svg rendering in QtSvg by filtering out desc and title tags inside text tags pre-rendering
      - fix Python plugin quickparser.py to better handle svg mixed case tag names
      - better handle cancelling out of plugins prior to their completion


Sigil-2.0.2
    Bug Fixes
      - fix incorrect clip tool button insertion point due to null activeWindow value
      - fix Windows multiple screen issues when not properly identified (Qt6.5.2 patch fix)
      - fix Mac Accessibility related crashes when using non-native QFileDialog (Qt 6.5.2 patch fix)
      - workaround MacOS QMessageBox loss of focus Qt 6.5.X bug without hurting other platforms
      - fix pretty print mend not formatting mathml
      - fix Accessibility related crashes in QFontComboBox (Qt 6.5.2 patch fix)
      - prevent crashing if user mistakenly tries to delete entire ncx in CodeView
      - harden delete unused styles to trailing whitespace in class names
      - fix unrecognized media-types application/xml and text/xml