@@ -1,4 +1,4 @@
-pre-2.x.x
+Sigil-pre-2.x.x
     New Features
       - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
       - add ability to change keyboard focus using keyboard shortcuts or menus
@@ -17,6 +17,7 @@ pre-2.x.x
       - fix svg rendering in QtSvg by filtering out desc and title tags inside text tags pre-rendering
       - fix Python plugin quickparser.py to better handle svg mixed case tag names
       - better handle cancelling out of plugins prior to their completion
+      - better handle Guide/Landmark title translations (thank you BeckyEbook)
 
 
 Sigil-2.0.2
